fixed some spacing issues, made long lines shorter, removed a few dangling references

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,5 @@
 .navbar-inverse {
-    background-image: linear-gradient(to bottom,#ffffff 0,#ffffff 100%);
+    background-image: linear-gradient(to bottom, #ffffff 0, #ffffff 100%);
     border-color: #E4ECF2;
     opacity: 0.95;
     font-size: 14px;
@@ -7,7 +7,7 @@
 }
 
 .navbar-inverse .navbar-brand, .navbar-inverse .navbar-nav>li>a {
-    text-shadow: 0 0px 0 rgba(0,0,0,.25);
+    text-shadow: 0 0px 0 rgba(0, 0, 0, .25);
 }
     
 
@@ -152,8 +152,7 @@
     padding-right: 15px;
     padding-bottom: 15px;
     margin-bottom: 10px;
-/*    background-color: rgba(184,184,184, 0.1);
-*/}
+}
 
 #accordion {
     margin-bottom: 450px;
@@ -255,7 +254,6 @@ p.tweet-text-time {
     next three are in charge of tweet header and tagline
 //
 */
-
 
 
 .tweetsIntroP {
